created heading few also I've done few css lines

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>დაამზადე შენი ონლაინ ვიზიტკა</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500&family=Noto+Serif+Georgian&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="satauri">შექმენი შენი ონლაინ <span>სავიზიტო ბარათი უფასოდ</span></h1>
+    <h1 class="satauri">შექმენი შენი ვირტუალური სავიზიტო<span> ბარათი უფასოდ</span></h1>
 
     <script src="core.js"></script>
 </body>
