shesasworebelia baratis kodi /uxarisxoa foto/

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1 class="satauri">შექმენი შენი ვირტუალური სავიზიტო<span> ბარათი უფასოდ</span></h1>
+    <div class="mtavari">
+        <div class="barati">
+
+        </div>
+    </div>
 
     <script src="core.js"></script>
 </body>
