sheqmnilia card/logo/input/foto/logo shesacvlelia

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <h1 class="satauri">შექმენი შენი ვირტუალური სავიზიტო<span> ბარათი უფასოდ</span></h1>
     <div class="mtavari">
         <div class="barati">
-
+            <div class="logo"></div>
+                <input type="text" class="name" maxlength="30" placeholder="შეიყვანეთ სახელი">
+                <input type="text" class="name" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
+            
         </div>
     </div>
 
