next stage created card options / uploading logo from desktop/ animations / inputs in card /

--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
         <div class="barati">
             <div class="logo"></div>
                 <input type="text" class="name" maxlength="30" placeholder="შეიყვანეთ სახელი">
-                <input type="text" class="name" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
+                <input type="text" class="slogani" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
             
+
+                <input type="text" class="w-link" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
+                <input type="text" class="mail" maxlength="30" placeholder="შეიყვანეთ მეილი">
+        </div>
+        <div class="settings">
+            <input type="file" accept="*iamge" id="upload" hidden>
+            <label for="upload" class="btn upl">ატვირთე შენი ლოგო</label>
+            <div class="background">
+                <img src="img/download.jfif" class="active" alt="">
+                <img src="img/download.jfif" alt="">
+                <img src="img/download.jfif" alt="">
+                <img src="img/download.jfif" alt="">
+                <img src="img/download.jfif" alt="">
+                <img src="img/download.jfif" alt="">
+            </div>
         </div>
     </div>
 
