dasamtavrebelia js kodi gadmoweris / atvirtvis funqcionali / mosadzebnia card - ebi

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <img src="img/download.jfif" alt="">
                 <img src="img/download.jfif" alt="">
             </div>
+            <a href="#" id="link" download="visiting card.png"></a>
+            <button class="btn download-btn">გადმოწერა</button>
         </div>
     </div>
 
