--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#logs">Updates log</a></li>
       <li><a href="#info">Instructions</a></li>
-      <li><a href="#terms">Terms & Service</a></li>
+      <li><a href="terms.html">Terms & Service</a></li>
     </ul>
   </div>
 </nav>
@@ -62,12 +62,12 @@
             <input type="file" accept="*image" id="upload" hidden>
             <label for="upload" class="btn upl">ატვირთე შენი ლოგო</label>
             <div class="background">
-                <img src="img/download.jfif" class="active" alt="">
-                <img src="img/download.jfif" alt="">
-                <img src="img/download.jfif" alt="">
-                <img src="img/download.jfif" alt="">
-                <img src="img/download.jfif" alt="">
-                <img src="img/download.jfif" alt="">
+                <img src="img/9.jpeg" class="active" alt="">
+                <img src="img/3.jpeg" alt="">
+                <img src="img/4.jpeg" alt="">
+                <img src="img/5.jpeg" alt="">
+                <img src="img/6.jpeg" alt="">
+                <img src="img/7.jpeg" alt="">
             </div>
             <a href="#" id="link" download="visiting card.png"></a>
             <button class="btn download-btn">გადმოწერა</button>
