--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/terms.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500&family=Noto+Serif+Georgian&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
             <h2>Terms & Conditions</h2>
           </div>
           <div class="container__content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
-            <p>Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. </p>
-            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. </p>
-            <p>Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. </p>
-            <p>Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante. Nulla quam. Aenean laoreet. </p>
+           <h4>აღნიშნული სამომხმარებლო შეთანხმება აწესრიგებს ურთიერთობას VCC სერვისის ადმინისტრაციასა და სერვისის მომხმარებლებს შორის.</h4> 
+            <p>სამომხმარებლო შეთანხმების ყველა პუნქტი განკუთვნილია VCC-ის ყველა მომხმარებლისათვის. </p>
+            <p>VCC -ს ნებისმიერი სერვისის მოხმარებისას თქვენ ავტომატურად ეთანხმებით ქვემოთ მოცემული სამომხმარებლო შეთანხმების ყველა პუნქტს, წინააღმდეგ შემთხვევაში გთხოვთ, ნუ გამოიყენებთ VCC სერვისს. </p>
+            <p>მიუხედავად იმისა, რომ VCC -ის ადმინისტრაცია ეცდება აცნობოს მოხმარებლებს შეთანხმებაში შესული მნიშვნელოვანი ცვლილებების შესახებ, სამომხმარებლო შეთანხმება შესაძლოა შეიცვალოს ადმინისტრაციის მიერ ყოველგვარი სპეციალური შეტყობინების გარეშე. შესაბამისად, სერვისის გამოყენებისას იხელმძღვანელეთ სამომხმარებლო შეთანხმების უახლესი ვერსიით, რომელიც ხელმისაწვდომია ყველა მოხმარებლისათვის შემდეგ ბმულზესამომხმარებლო შეთანხმება . </p>
+            <p>საქართველოს ხელისუფლების მიერ ისეთი ნორმატიულ-საკანონმდებლო აქტების მიღების შემთხვევაში, რომლებიც მთლიანად ან ნაწილობრივ შეეხება საიტის ფუნქციონირებას, ადმინისტრაცია იტოვებს უფლებას ნებისმიერი ცვლილებები შეიტანოს საიტის ფუნქციონირებასა და სამოხმარებლო შეთანხმებაში, რათა ეს უკანასკნელი ახალ ნორმებს მიუსადაგოს. </p>
           </div>
           <div class="container__nav">
             <small>თანხმობაზე დაჭერით თქვენ ეთანხმებით საიტის მიერ ზემოთ ხსენებულ ყველა წესს.</small>
