--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="barati">
             <div class="logo"></div>
                 <input type="text" class="name" maxlength="30" placeholder="შეიყვანეთ სახელი">
-                <input type="text" class="slogani" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
+                <input type="text" class="slogani" maxlength="30" placeholder="შეიყვანეთ კომპანიის სახელი">
             
 
                 <input type="text" class="w-link" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
