--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <input type="text" class="slogani" maxlength="30" placeholder="შეიყვანეთ კომპანიის სახელი">
             
 
-                <input type="text" class="w-link" maxlength="30" placeholder="შეიყვანეთ სლოგანი">
+                <input type="text" class="w-link" maxlength="30" placeholder="შეიყვანე ტელეფონის ნომერი">
                 <input type="text" class="mail" maxlength="30" placeholder="შეიყვანეთ მეილი">
         </div>
         <div class="settings">
