donwloandig bugs fixed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <button class="btn download-btn">გადმოწერა</button>
         </div>
     </div>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
     <script src="js/core.js"></script>
     <script src="js/nav.js"></script>
 </body>
